--- a/style.css
+++ b/style.css
@@ -36,3 +36,21 @@ div#table {
     
     border: 1px solid black;
 }
+
+button {
+    padding: 5px;
+    
+    outline: none;
+    border: 1px solid black;
+    
+    background-color: white;
+    
+    transition: all 0.5s;
+}
+
+button:hover {
+    box-shadow: 2px 2px 5px rgba(0,0,0,50%);
+    background-color: #ddd;
+    
+    cursor: pointer;
+}
