--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ input {
     margin-top: 20px;
     border-radius: 5px;
     
+    width: 60%;
+    
     border: 1px solid black;
     
     font-size: 16px;
@@ -53,4 +55,14 @@ button:hover {
     background-color: #ddd;
     
     cursor: pointer;
+}
+
+header {
+    font-size: 12px;
+    font-family: "Montserrat", sans-serif;
+    
+    padding: 10px;
+    
+    border-bottom: 1px solid black;
+    box-shadow: 0 2px 5px rgba(0,0,0,50%);
 }
